@@ -1,3 +1,52 @@
-# WBP1-kdgblockgame
+# JAVA BLOCKGAME
+KDG BLOCKGAME - Maxim Derboven & Alexie Chaerle 2020-2021
+Our java block game can be compared to tetris. Only the blocks don't fall down. But you can't rotate them and put them anywhere.
 
-KDG programmeer project 1ste jaar - JAVA (FX)
+## Installation
+
+Java 11.0.9  
+Java-swt (JavaFX)
+
+
+## Usage
+Simple as it is, run class MAIN  
+Use vm options: 
+
+```
+--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media
+```
+
+## Contributing
+I no longer edit this JavaFX project.  
+Later I want to make this as a phone application.
+
+## Pictures
+![Splashscreen](https://github.com/maximderboven/blockgame/blob/master/documentation/splash.PNG?raw=true)
+![Settings screen](https://github.com/maximderboven/blockgame/blob/master/documentation/settings.PNG?raw=true)
+![Login screen](https://github.com/maximderboven/blockgame/blob/master/documentation/login.PNG?raw=true)
+![Highscores screen](https://github.com/maximderboven/blockgame/blob/master/documentation/highscores.PNG?raw=true)
+![Gameover screen](https://github.com/maximderboven/blockgame/blob/master/documentation/gameover.PNG?raw=true)
+![Game screen](https://github.com/maximderboven/blockgame/blob/master/documentation/game.PNG?raw=true)
+
+## License
+MIT License
+
+Copyright (c) 2021 Maxim Derboven
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
